# cg-use-everywhere

./: pyproject.toml
